tests/fixtures/invalid/float_lt_none.py
# Cannot compare with < Float and None
x: bool = 1.0 < None
